--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "nextup"
+name = "nextup-tui"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "A terminal application that randomizes a list of names. Useful for daily standup meetings."
+repository = "https://github.com/slipperypenguin/nextup"
 
 [[bin]]
 name = "nextup"
@@ -9,8 +12,8 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0"
-clap = { version = "4.4", features = ["derive"] }
-crossterm = "0.27"
-rand = "0.8"
-ratatui = "0.24"
+clap = { version = "4.5", features = ["derive"] }
+crossterm = "0.29.0"
+rand = "0.9.2"
+ratatui = "0.29.0"
 tokio = { version = "1.0", features = ["full"] }
